# sleepy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dev00.ipynb  dev01.ipynb  dev02.ipynb  dev03-test.ipynb  dev04.ipynb
.github/workflows/: cmake.yml
.ipynb_checkpoints/: dev01-checkpoint.ipynb  dev02-checkpoint.ipynb  dev03-test-checkpoint.ipynb
src/: CMakeLists.txt  dormancy.h  dormancy_determined_v1.h  dormancy_selection_rates.h  sleepy.cpp
tests/: CMakeLists.txt  dormancy_test.cpp
